Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-9101

Corruption in data captured by QAudioInput

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.6.3
    • 4.6.2
    • Multimedia
    • None

    Description

      Configuring QAudioInput with the following format results in corrupted data (attached) when running on Windows (XP SP2):

      frequency = 11025
      channels = 1
      sampleSize = 16
      codec = audio/pcm
      byteOrder = QAudioFormat::LittleEndian
      sampleType = QAudioFormat::SignedInt
      

      Setting the frequency instead to 8000 results in correct data.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            korbatit Kurt Korbatits (closed Nokia identity) (Inactive)
            gastockw Gareth Stockwell
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes