Corruption in data captured by QAudioInput Increased default buffer size and period size for windows. 11025monoS16LE was choppy, needed bigger periods.

Task-number:QTBUG-9101
Reviewed-by:Derick Hawcroft